--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-# Auto detect text files and perform LF normalization
+# Detecta automáticamente archivos de texto y realiza la normalización LF
 * text=auto
